# Ramadhan-Code-Fest-2026

./: .gitmodules  README.md
kalkulator/: Cargo.toml
kalkulator/src/: main.rs
ngetik-aja-dulu/: README.md  info.html  stat.html  style.css
ramadhan-prayer-times-dashboard/: .env.example  README.md  package-lock.json  package.json
ramadhan-prayer-times-dashboard/public/: app.js  index.html  styles.css
ramadhan-prayer-times-dashboard/src/: server.js
